# pydantic-ai-play

./: main.py  pyproject.toml
src/: agent.py  deps.py  enums.py  utils.py
src/agent_modes/: core.py  deps.py  main.py  utils.py
src/agent_modes/tools/: approvals.py
src/schemas/: __init__.py  approvals.py  jobs.py
src/sub_agents/: core.py  deps.py  main.py
src/sub_agents/tools/: __init__.py  jobs.py
src/tools/: __init__.py  approvals.py  jobs.py  router.py  utils.py
